--- a/demo_index.html
+++ b/demo_index.html
@@ -5,13 +5,15 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>
+      This is our test repository to test forking a repository and sending a
+      pull request back to make changes to the original
+    </p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <!-- Tyra -->
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <!-- tyrashub -->
 
+    <!-- java and javascript -->
   </body>
 </html>
